[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-ml-remla-team3"
version = "0.3.1"
authors = [
  { name="Denis Krylov", email="dkrylov@tudelft.nl" },
]
description = "Preprocessing library for Restaurant Sentiment Analysis for the REMLA course."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mlopps", "remla", "preprocessing", "nlp", "sentiment"]
dependencies = [
    "nltk>=3.6",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["lib_ml*"]
exclude = ["tests*"]